option java_package = "com.google.android.checkin.proto";

message AndroidCheckinRequest {
	message DeviceConfiguration {
		optional int32 touchscreen = 1;
		optional int32 keyboard = 2;
		optional int32 navigation = 3;
		optional int32 screenLayout = 4;
		optional bool hasHardKeyboard = 5;
		optional bool hasFiveWayNavigation = 6;
		optional int32 screenDensity = 7;
		optional int32 glEsVersion = 8;
		repeated string systemSharedLibrary = 9;
		repeated string systemAvailableFeature = 10;
		repeated string nativePlatform = 11;
		optional int32 screenWidth = 12;
		optional int32 screenHeight = 13;
		repeated string systemSupportedLocale = 14;
		repeated string glExtension = 15;
		optional int32 deviceClass = 16;
		optional int32 maxApkDownloadSizeMb = 17;
	}
	message Checkin {
		message Event {
			optional string tag = 1;
			optional string value = 2;
			optional int64 timeMs = 3;
		}
		message Statistic {
			optional string tag = 1;
			optional int32 count = 2;
			optional float sum = 3;
		}
		message Build {
			optional string id = 1;
			optional string product = 2;
			optional string carrier = 3;
			optional string radio = 4;
			optional string bootloader = 5;
			optional string client = 6;
			optional int64 timestamp = 7;
			optional int32 googleServices = 8;
			optional string device = 9;
			optional int32 sdkVersion = 10;
			optional string model = 11;
			optional string manufacturer = 12;
			optional string buildProduct = 13;
			optional bool otaInstalled = 14;
		}
	
		optional Build build = 1;
		optional int64 lastCheckinMs = 2;
		repeated Event event = 3;
		repeated Statistic stat = 4;
		repeated string requestedGroup = 5;
		optional string cellOperator = 6;
		optional string simOperator = 7;
		optional string roaming = 8;
		optional int32 usernumber = 9;
	}
	optional string imei = 1;
	optional int64 androidId = 2;
	optional string digest = 3;
	optional Checkin checkin = 4;
	optional string desiredBuild = 5;
	optional string locale = 6;
	optional int64 loggingId = 7;
	optional string marketCheckin = 8;
	repeated string macAddress = 9;
	optional string meid = 10;
	repeated string accountCookie = 11; // "[mail@gmail.com]" followed by SID
	optional string timeZone = 12;
	optional fixed64 securityToken = 13;
	optional int32 version = 14;
	repeated string otaCert = 15;
	optional string serialNumber = 16;
	optional string esn = 17;
	optional DeviceConfiguration deviceConfiguration = 18;
	repeated string macAddressType = 19;
	optional int32 fragment = 20;
	optional string username = 21;
}

message AndroidCheckinResponse {
	message Intent {
		message Extra {
			optional string name = 6;
			optional string value = 7;
		}
		optional string action = 1;
		optional string dataUri = 2;
		optional string mimeType = 3;
		optional string javaClass = 4;
		repeated Extra extra = 5;
	}
	
	message GservicesSetting {
		optional bytes name = 1;
		optional bytes value = 2;
	}

	optional bool statsOk = 1;
	repeated Intent intent = 2;
	optional int64 timeMs = 3;
	optional string digest = 4;
	repeated GservicesSetting setting = 5;
	optional bool marketOk = 6;
	optional fixed64 androidId = 7;
	optional fixed64 securityToken = 8;
	optional bool settingsDiff = 9;
	repeated string deleteSetting = 10;
}